--- a/app/src/main/res/layout/fragment_crime_camera.xml
+++ b/app/src/main/res/layout/fragment_crime_camera.xml
@@ -5,18 +5,18 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     >
     <SurfaceView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
+        android:layout_width="match_parent"
         android:id="@+id/crime_camera_surfaceView"
         />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/crime_camera_takePictureButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/crime_camera_takPicture"
         android:text="Take"
         />
 </LinearLayout>
