--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -78,4 +78,20 @@
         android:layout_marginLeft="16dp"
         android:text="Solved?"
         />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/crime_suspectButton"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="Choose Suspect"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/crime_reportButton"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="Send Crime Report"
+        />
 </LinearLayout>
